@@ -217,6 +217,12 @@ class WSGIUtilsTestCase(WerkzeugTestCase):
             lines = list(wsgi.make_line_iter(test_stream, limit=len(data), buffer_size=4))
             assert lines == ['abc\r', 'def\r\n', 'ghi']
 
+    def test_lines_longer_buffer_size(self):
+        data = '1234567890\n1234567890\n'
+        for bufsize in xrange(1, 15):
+            lines = list(wsgi.make_line_iter(StringIO(data), limit=len(data), buffer_size=4))
+            self.assert_equal(lines, ['1234567890\n', '1234567890\n'])
+
 
 def suite():
     suite = unittest.TestSuite()
